Simulate Zinani figures at two different alpha values
Updated supplemental figure sim ids

Updated zinani fig simulation with all 3 alpha values

Updated base model examples simulation function

--- a/notebooks/modeling_paper_figures.ipynb
+++ b/notebooks/modeling_paper_figures.ipynb
@@ -267,10 +267,10 @@
     "for label, subfig in fig_bm_subfigures.items():\n",
     "    subfig.add_artist(matplotlib.text.Text(x=0, y=1, text=f'{label}.', fontsize=13, fontweight='bold', verticalalignment='top',transform=subfig.transSubfigure))\n",
     "fig_bm_palette = {\n",
-    "    'fig1.tandem_upstream': main_palette['tandem'],\n",
-    "    'fig1.tandem_downstream': main_palette['tandem_alt'],\n",
-    "    'fig1.convergent': main_palette['convergent'],\n",
-    "    'fig1.divergent': main_palette['divergent'],\n",
+    "    'fig.bm.tandem_reporter_upstream': main_palette['tandem'],\n",
+    "    'fig.bm.tandem_reporter_downstream': main_palette['tandem_alt'],\n",
+    "    'fig.bm.convergent': main_palette['convergent'],\n",
+    "    'fig.bm.divergent': main_palette['divergent'],\n",
     "    'independent': main_palette['light_gray'],\n",
     "    'dependent': main_palette['gray'],\n",
     "    'gray': main_palette['gray'],\n",
@@ -1928,7 +1928,7 @@
     "    subfig.add_artist(matplotlib.text.Text(x=0, y=1, text=f'{label}.', fontsize=13, fontweight='bold', verticalalignment='top',transform=subfig.transSubfigure))\n",
     "    subfig.subplots_adjust(left=0.1, bottom=0.28, right=0.95, top=0.8)\n",
     "unique_alphas = sorted(base_model_df['coeff.sigma_squared'].unique())\n",
-    "alpha_values = unique_alphas[:2] + unique_alphas[6:]\n",
+    "alpha_values = unique_alphas\n",
     "fig_supp_energy_axes = fig_supp_alpha_subfigures['A'].subplots(ncols=len(alpha_values), sharex=True, sharey=True)\n",
     "fig_supp_linear_axes = fig_supp_alpha_subfigures['B'].subplots(ncols=len(alpha_values), sharex=True, sharey=True)\n",
     "fig_supp_circular_axes = fig_supp_alpha_subfigures['C'].subplots(ncols=len(alpha_values), sharex=True, sharey=True)\n",
@@ -1945,10 +1945,10 @@
     "        (\n",
     "            base_model_df['rates.sc_dependent'] == 1.0\n",
     "        ) & (\n",
-    "            (base_model_df['condition'] == 'fig1.tandem_downstream') |\n",
-    "            (base_model_df['condition'] == 'fig1.tandem_upstream') |\n",
-    "            (base_model_df['condition'] == 'fig1.convergent') |\n",
-    "            (base_model_df['condition'] == 'fig1.divergent')\n",
+    "            (base_model_df['condition'] == 'fig.bm.tandem_reporter_downstream') |\n",
+    "            (base_model_df['condition'] == 'fig.bm.tandem_reporter_upstream') |\n",
+    "            (base_model_df['condition'] == 'fig.bm.convergent') |\n",
+    "            (base_model_df['condition'] == 'fig.bm.divergent')\n",
     "        ) & (\n",
     "            (np.abs(base_model_df['coeff.sigma_squared'] - alpha) < 0.0001)\n",
     "        )\n",
@@ -2021,7 +2021,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
